--- a/style.css
+++ b/style.css
@@ -48,3 +48,37 @@ h2{
     background-position: right;
 
 }
+.one{
+    width: 40%;
+    margin: 5%;
+   padding: 5%;
+   box-shadow: 10px 10px 50px gray;
+   border-left: 8px solid
+   ;
+   border-image: linear-gradient(rgb(255, 0, 8),rgb(255, 68, 0));
+   border-image-slice: 1;
+   /* border-image: url(images/dream-bg.png);
+   background-repeat: no-repeat;
+   background-position: left; */
+}
+.two{
+    width: 40%;
+    margin: 5%;
+    box-shadow: 10px 10px 50px gray;
+    padding: 5%;
+    border-left: 8px solid
+    ;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+
+/* div .one{
+    border-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: left
+} */
+.four{
+    border-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: left
+}
